--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.1.10",
     "mongoose": "^5.9.16",
+    "multer": "^1.4.2",
     "validator": "^10.9.0"
   },
   "devDependencies": {
