--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongodb": "^3.1.10",
     "mongoose": "^5.9.16",
     "multer": "^1.4.2",
+    "sharp": "^0.25.4",
     "validator": "^10.9.0"
   },
   "devDependencies": {
